crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_clear_trigger.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.clear_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear selection",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
