crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_control.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.control_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
    ],
    styles: [],
}
