crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_description.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Id,
            String(
                "sel-description",
            ),
        ),
    ],
    styles: [],
}
