crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_empty_state.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.empty_state_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "empty-state",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [],
}
