crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_error_message.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "sel-error-message",
            ),
        ),
    ],
    styles: [],
}
