crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_hidden_input.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            AutoComplete,
            String(
                "country",
            ),
        ),
        (
            Form,
            String(
                "checkout",
            ),
        ),
        (
            Name,
            String(
                "country",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "bravo",
            ),
        ),
    ],
    styles: [],
}
