crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_indicator_open.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.indicator_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
