crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_item_group_label.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: "snapshot_attrs(&api.item_group_label_attrs(&key(\"group\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-group-label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Id,
            String(
                "sel-group-group-label",
            ),
        ),
    ],
    styles: [],
}
