crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_item_selected_highlighted.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "selected",
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "Bravo",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "sel-item-bravo",
            ),
        ),
        (
            Role,
            String(
                "option",
            ),
        ),
    ],
    styles: [],
}
